More or less functional in 1.19 now! Some functionality is currently bugged and therefore disabled, and multiblocks won't display properly in the book. Additionally, I've ported everything to loom mappings cuz their better imo