@@ -1,26 +1,19 @@
 package vazkii.patchouli.api;
 
 import com.google.common.base.Suppliers;
-
 import net.minecraft.block.Block;
 import net.minecraft.block.BlockState;
-import net.minecraft.data.client.VariantSettings;
 import net.minecraft.item.ItemStack;
-import net.minecraft.network.chat.Component;
 import net.minecraft.server.network.ServerPlayerEntity;
 import net.minecraft.state.property.Property;
 import net.minecraft.text.Text;
+import net.minecraft.util.BlockRotation;
 import net.minecraft.util.Identifier;
 import net.minecraft.util.math.BlockPos;
-import net.minecraft.world.level.block.state.properties.Property;
-
 import org.apache.logging.log4j.LogManager;
-
-import org.jetbrains.annotations.NotNull;
 import vazkii.patchouli.api.stub.StubPatchouliAPI;
 
 import javax.annotation.Nullable;
-
 import java.io.InputStream;
 import java.util.Map;
 import java.util.function.BiFunction;
@@ -31,7 +24,8 @@ import java.util.function.Supplier;
 public class PatchouliAPI {
 	private static final Supplier<IPatchouliAPI> LAZY_INSTANCE = Suppliers.memoize(() -> {
 		try {
-			return (IPatchouliAPI) Class.forName("vazkii.patchouli.common.base.PatchouliAPIImpl").newInstance();
+			return (IPatchouliAPI) Class.forName("vazkii.patchouli.common.base.PatchouliAPIImpl")
+					.getDeclaredConstructor().newInstance();
 		} catch (ReflectiveOperationException e) {
 			LogManager.getLogger().warn("Unable to find PatchouliAPIImpl, using a dummy");
 			return StubPatchouliAPI.INSTANCE;
@@ -178,7 +172,7 @@ public class PatchouliAPI {
 		 * @param center      Where to place the multiblock's center
 		 * @param rotation    Orientation to visualize
 		 */
-		void showMultiblock(IMultiblock multiblock, Text displayName, BlockPos center, VariantSettings.Rotation rotation);
+		void showMultiblock(IMultiblock multiblock, Text displayName, BlockPos center, BlockRotation rotation);
 
 		/**
 		 * Clears the currently visualized multiblock. Only works clientside.
